mobile overflow fix attempt

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@
 .contentImg {
   width: 100%;
   min-height: 350px;
+  max-width: 350px;
   border-radius: 5px;
   background-repeat: no-repeat;
 }
